# SchoolBusRouteOptimization

./: .gitignore  README.md  _gen_scenario.py  clustering.py  data_generation.py  main.py  pyproject.toml  reporte.tex  tsp_solver.py  zone_partitioning.py
CVRPTW_optimización/: config.py  generate_data.py  optimize_routes.py  run_all.py  visualize_results.py
CVRPTW_optimización/data/: poblation_barrios_medellin_2026.csv  valle_aburra_urbano.geojson
CVRPTW_optimización/outputs/: route_results.json
docs/latex/: README.md  optimization.tex
src/: clustering.py  comparacion.ipynb  data_generation.py  setcover_rutas.ipynb  tsp_solver.py
