[project]
name = "school-bus-routing"
version = "0.1.0"
description = "Capacitated school bus routing via clustering and TSP — Valle de Aburrá"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "networkx",
    "osmnx",
    "kmedoids",
    "ortools",
    "shapely",
    "matplotlib",
    "contextily",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
